tdf#141649 doc import: do not duplicate conditional text

This patch is a mixed blessing.
It will be a regression if an IF FIELD was bogus,
and the user only wanted to see the modified, unrefreshed text.

That is because in MS Word, most fields do not update automatically,
but require the user to press F9 to refresh the contents.
The contents are also editable, so the result might not match
either the true or false result-string.

However, in LO the IF FIELD is always refreshed, and thus will
never display any bogus hand-modifications.

The import of these IF fields started in DOC in LO 6.1,
but it was never correct and immediately duplicated content.
Additionally, DOC format didn't export at all, so anything
to do with IF FIELDS was lost - meaning that after a round-trip
the result was the same as what MS Word last saw with the field gone.

So in the eyes of the user, the fixing of import and export
might be causing a regression of changed text.
So be it.

I can only assume that in most cases the use of an IF FIELD
is intentional and that it would be desirsable to have it working.

Change-Id: If90f6f4cddcefebf379352aac6519595c1bf2b23
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145821
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>